<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical"
     >

    <ImageView
        android:id="@+id/background"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:src="@drawable/alumnaebackground"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:src="#33000000"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Placement Guru"
        android:shadowColor="#000000"
        android:elevation="50dp"

        android:fontFamily="@font/ubuntu"
        android:textSize="30dp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:shadowColor="#000000"
        android:elevation="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:textSize="28dp"
        android:layout_below="@+id/title"
        android:text="Alumnae"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"/>








    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:layout_marginTop="230dp"

        android:paddingRight="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/squared"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="#E6000000" />

        <EditText
            android:layout_below="@+id/email"

            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/squared"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#E6000000" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_below="@id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/squared1"
            android:drawingCacheQuality="high"
            android:text="@string/btn_login"
            android:textColor="#000000" />

        <!-- Link to Login Screen -->



        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_below="@id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="Enroll as PG Alumnae"
            android:drawingCacheQuality="high"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />


    </RelativeLayout>

</RelativeLayout>